# sequence-alignment

./: Cargo.toml  README.md  sequences.fasta
src/: align.rs  fasta.rs  main.rs  sequence.rs  web.rs
