[package]
name = "alignment"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "alignment"
test = false
bench = false

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
clap = { version = "4.5.26", features = ["derive"] }
itertools = "0.14.0"
ordered-float = "4.6.0"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
